Text overflow fix in confirmation message @dhrupo
commit 83877b1e9ee2cf9fce46a98df84a9abca66918e9
Author: Dhrupo Nil <dhrupo@gmail.com>
Date:   Fri Jun 10 16:22:10 2022 +0600

    text overflow fix

--- a/resources/assets/public/scss/components.scss
+++ b/resources/assets/public/scss/components.scss
@@ -638,6 +638,7 @@
   position: relative;
   border: solid #ced4da 1px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  overflow-wrap: break-word;
 }
 
 #{$prefix}-errors-in-stack {
